<resources>
    <string name="app_name">FragmentBillingTest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="landscape_text">In landscape fragment</string>
    <string name="portrait_text">In portrait fragment</string>
    <string name="num_things_string">The amount of things you have is: </string>
    <string name="button_string">Click here to browse purchase options.</string>
    <string name="title_activity_store">StoreActivity</string>
    <string name="button_one_string">Buy one thing</string>
    <string name="button_five_string">Buy five things</string>
    <string name="button_ten_string">Buy ten things</string>
    <string name="return_button_string">Return to main Screen</string>
</resources>
